--- a/support.html
+++ b/support.html
@@ -79,8 +79,8 @@
   <body>
     <div class="about-section">
       <h1>Contact us</h1>
-      <p>e-mail: csavaew@outlook.com</p>
-      <p>tel: +8615427708412</p>
+      <p>e-mail: sdfwqes@outlook.com</p>
+      <p>tel: +8615427708696</p>
     </div>
   </body>
 </html>
